--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html" title="Home"> <img src="./assets/sprint.svg" alt="logo" class="logo"></a>
-        <a href="#" title="do not go anywhere"> <img src="assets/hamburgermenu.svg" alt="" class="menu"></a>
+        <a href="index.html" title="do not go anywhere"> <img src="assets/hamburgermenu.svg" alt="" class="menu"></a>
     </header>
     <!-- debut exemple -->
     <main>
