--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div class="main_content">
             <h1>Welcome to Berlin and the Future</h1>
             <button><a href="" title="Get Started">Get Started</a> </button>
+
         </div>
+
     </main>
     <div class="big">
         <div><img src="assets/cat.svg" alt="" class="icone"></div>
@@ -31,22 +33,23 @@
     <div class="big">
         <div><img src="assets/world.svg" alt="" class="icone"></div>
         <div class="small">
-            <h3>Best-in-class Features</h3>
-            Nobody does this stuff better than us. You can bet your life on that.
+            <h3>Reliable Service</h3>
+            You can count on us to helb you whenever you neet it. We're talking round the lock servive.
         </div>
     </div>
     <div class="big">
         <div><img src="assets/swim.svg" alt="" class="icone"></div>
         <div class="small">
-            <h3>Best-in-class Features</h3>
-            Nobody does this stuff better than us. You can bet your life on that.
+            <h3>An Acauired Taste</h3>
+            It may take a little while for you to warm up to us but once you do you will never want to
+            switch.
         </div>
     </div>
     <div class="big">
         <div><img src="assets/columns.svg" alt="" class="icone"></div>
         <div class="small">
-            <h3>Best-in-class Features</h3>
-            Nobody does this stuff better than us. You can bet your life on that.
+            <h3>No Limits</h3>
+            There are absolutely no limits. We do not throttle. We do not cap.
         </div>
     </div>
 
@@ -95,7 +98,7 @@
 
 
     <footer>
-        <p class="one"> &copy; 2020 Some Organization</p>
+        <p class="one"> &copy; 2020 Hermann-DCI-Leipzig </p>
     </footer>
 
 
