--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div><img src="assets/cat.svg" alt="" class="icone"></div>
         <div class="small">
             <h3>Best-in-class Features</h3>
-            Nobody does this stuff better than us. You can bet your life on that.
+            <p>Nobody does this stuff better than us. You can bet your life on that.</p>
         </div>
     </div>
     <div class="big">
