background color gray

--- a/index.html
+++ b/index.html
@@ -23,33 +23,36 @@
         </div>
 
     </main>
-    <div class="big">
-        <div><img src="assets/cat.svg" alt="" class="icone"></div>
-        <div class="small">
-            <h3>Best-in-class Features</h3>
-            <p>Nobody does this stuff better than us. You can bet your life on that.</p>
+    <div class="big__one">
+        <div class="big">
+            <div><img src="assets/cat.svg" alt="" class="icone"></div>
+            <div class="small">
+                <h3>Best-in-class Features</h3>
+                <p>Nobody does this stuff better than us. You can bet your life on that.</p>
+            </div>
         </div>
-    </div>
-    <div class="big">
-        <div><img src="assets/world.svg" alt="" class="icone"></div>
-        <div class="small">
-            <h3>Reliable Service</h3>
-            You can count on us to helb you whenever you neet it. We're talking round the lock servive.
+
+        <div class="big">
+            <div><img src="assets/world.svg" alt="" class="icone"></div>
+            <div class="small">
+                <h3>Reliable Service</h3>
+                You can count on us to helb you whenever you neet it. We're talking round the lock servive.
+            </div>
         </div>
-    </div>
-    <div class="big">
-        <div><img src="assets/swim.svg" alt="" class="icone"></div>
-        <div class="small">
-            <h3>An Acauired Taste</h3>
-            It may take a little while for you to warm up to us but once you do you will never want to
-            switch.
+        <div class="big">
+            <div><img src="assets/swim.svg" alt="" class="icone"></div>
+            <div class="small">
+                <h3>An Acauired Taste</h3>
+                It may take a little while for you to warm up to us but once you do you will never want to
+                switch.
+            </div>
         </div>
-    </div>
-    <div class="big">
-        <div><img src="assets/columns.svg" alt="" class="icone"></div>
-        <div class="small">
-            <h3>No Limits</h3>
-            There are absolutely no limits. We do not throttle. We do not cap.
+        <div class="big">
+            <div><img src="assets/columns.svg" alt="" class="icone"></div>
+            <div class="small">
+                <h3>No Limits</h3>
+                There are absolutely no limits. We do not throttle. We do not cap.
+            </div>
         </div>
     </div>
 
