--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html" title="Home"> <img src="./assets/sprint.svg" alt="logo" class="logo"></a>
         <a href="index.html" title="do not go anywhere"> <img src="assets/hamburgermenu.svg" alt="" class="menu"></a>
     </header>
-    <!-- debut exemple -->
+    <!-- This is my hero page -->
     <main>
         <div class="main_content">
             <h1>Welcome to Berlin and the Future</h1>
@@ -23,6 +23,9 @@
         </div>
 
     </main>
+    <!-- The end of my hero page -->
+
+    <!-- This is the begining of my icon  -->
     <div class="big__one">
         <div class="big">
             <div><img src="assets/cat.svg" alt="" class="icone"></div>
@@ -55,51 +58,9 @@
             </div>
         </div>
     </div>
+    <!-- The end of my icon -->
 
-    <!-- fin exemple -->
-
-
-    <!-- <div class="blog">
-
-        <div class="icon"><img class="image_icon" src="assets/cat.svg" alt=""></div>
-        <div class="text">
-            <h3>Best-in-class Features</h3>
-            <p>Nobody does this stuff better than us. You can bet your life on that.</p>
-        </div>
-
-    </div>
-    <div class="blog">
-        <div class="small_blog">
-            <div class="icon"><img class="image_icon" src="assets/world.svg" alt=""></div>
-            <div class="text">
-                <h3>Reliable Service</h3>
-                <p>You can count on us to helb you whenever you neet it. We're talking round the lock servive.</p>
-            </div>
-        </div>
-    </div>
-    <div class="blog">
-        <div class="small_blog">
-            <div class="icon"><img class="image_icon" src="assets/swim.svg" alt=""></div>
-            <div class="text">
-                <h3>An Acauired Taste</h3>
-                <p>It may take a little while for you to warm up to us but once you do you will never want to
-                    switch.
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="blog">
-        <div class="small_blog">
-            <div class="icon"><img class="image_icon" src="assets/columns.svg" alt=""></div>
-            <div class="text">
-                <h3>No Limits</h3>
-                <p>There are absolutely no limits. We do not throttle. We do not cap.</p>
-            </div>
-        </div>
-    </div>
- -->
-
-
+    <!-- Fin exemple -->
     <footer>
         <p class="one"> &copy; 2020 Hermann-DCI-Leipzig </p>
     </footer>
