--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Fin exemple -->
     <footer>
-        <p class="one"> &copy; 2020 Hermann-DCI-Leipzig </p>
+        <p class="one"> &copy; 2020 Some organisation </p>
     </footer>
 
 
